--- a/ui/main.css
+++ b/ui/main.css
@@ -1,3 +1,157 @@
-body, html{
-    
+body, html {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    color:#91a9bc;
+    font-family: "Lato", sans-serif;
+    background-color: #fff;
+}
+
+.register{
+  width:100%;
+}
+
+.about{
+  width:100%;
+}
+img{
+  width:100%;
+  max-width: 100%;
+}
+
+
+/** Styling tap target tags **/
+
+nav a, button{
+  min-width: 48px;
+  min-height: 48px;
+}
+
+
+/** Form styling **/
+* {box-sizing: border-box;}
+
+.input-container {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.icon {
+    padding: 10px;
+    background: #65717b;
+    color: white;
+    min-width: 50px;
+    text-align: center;
+}
+
+.input-field {
+    width: 100%;
+    padding: 10px;
+    outline: none;
+}
+
+.input-field:focus {
+    border: 2px solid #65717b;
+}
+
+/* Set a style for the submit button */
+.btn {
+    background-color: #65717b;
+    color: white;
+    padding: 15px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+    margin-bottom: 5px;
+    font-size:2rem;
+}
+
+.btn:hover {
+    opacity: 1;
+}
+
+
+
+.bg { 
+    /* The image used */
+    background: url("./img/bg.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
+}
+
+.story-section{
+  width:60%;
+  margin:auto;
+  /*margin-top:10rem;*/
+  color:#fff;
+  text-transform: capitalize;
+}
+
+.story-section h1{
+  font-family: "Lato", sans-serif;
+  font-size: 2.5rem;
+}
+
+
+.story-section p{
+  color:#1d2932;
+}
+
+
+.container{
+  width:80%;
+  margin:auto;
+  padding: 16px;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.text-left{
+  text-align: left;
+}
+
+.text-right{
+  text-align: right;
+}
+
+
+
+@media screen and (min-width: 600px) {
+  .main{
+    display:flex;
+    flex-wrap: wrap;height:100%;
+  }
+  .register{
+    flex:30%;
+    order:2;
+    margin:auto;
+  }
+
+  .about {
+    flex:70%;
+    order:1;
+
+  }
+  .story-section{    
+    margin-top:15%;
+    color:#fff;
+  }
+
+  .story-section p{
+    color:#fff;
+  }
+
+  .btn.responsive-btn{
+    width:40%;
+    margin-right:5px;
+  }
 }
