--- a/ui/main.css
+++ b/ui/main.css
@@ -314,7 +314,7 @@ img {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     text-align: center;
-    height: 50px;
+    height: auto;
     margin: 10px 0 10px 0;
 }
 
@@ -336,4 +336,21 @@ a .card:hover{
 
 .entry{
     flex:75%;
+}
+
+
+.right{
+    float:right;
+    margin-top:5px;
+}
+
+.btn-float{
+    position: absolute;
+    top:200px;
+    right: 40px;
+    border-radius:50%;
+}
+
+.push-down{
+    margin-top:40px
 }
