--- a/ui/main.css
+++ b/ui/main.css
@@ -360,3 +360,35 @@ a .card:hover{
     height: 200px;
     border-radius:0;
 }
+
+/*-------------------------------------------------------------*/
+/* Style inputs with type="text", select elements and textareas */
+.userprofile input[type=text],input[type=file], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */  
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+.userprofile input[type=submit] {
+    background-color: #818181;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+
+
+/* When moving the mouse over the submit button, add a darker green color */
+.userprfile input[type=submit]:hover {
+    background-color: #818181;
+}
+
