--- a/ui/styles/main.css
+++ b/ui/styles/main.css
@@ -14,6 +14,7 @@ body, html {
 .about{
   width:100%;
 }
+
 img{
   width:100%;
   max-width: 100%;
@@ -56,14 +57,21 @@ nav a, button{
     border: 2px solid #65717b;
 }
 
+.img-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 /* Set a style for the submit button */
 .btn {
     background-color: #65717b;
     color: white;
     padding: 15px 20px;
     border: none;
+    border-radius: 10px;
     cursor: pointer;
-    width: 100%;
     opacity: 0.9;
     margin: 5px 0 5px 0;
     font-size:1rem;
@@ -77,7 +85,7 @@ nav a, button{
 
 .bg { 
     /* The image used */
-    background: url("./img/bg.jpg") no-repeat center center fixed;
+    background: url("../img/bg.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -95,7 +103,7 @@ nav a, button{
 }
 
 .story-section h1{
-  font-family: "Lato", sans-serif;
+  font-family: "Tangerine", sans-serif;
   font-size: 2.5rem;
 }
 
@@ -122,40 +130,6 @@ nav a, button{
 .text-right{
   text-align: right;
 }
-
-
-
-@media screen and (min-width: 600px) {
-  .main{
-    display:flex;
-    flex-wrap: wrap;height:100%;
-  }
-  .register{
-    flex:30%;
-    order:2;
-    margin:auto;
-  }
-
-  .about {
-    flex:70%;
-    order:1;
-
-  }
-  .story-section{    
-    margin-top:15%;
-    color:#fff;
-  }
-
-  .story-section p{
-    color:#fff;
-  }
-
-  .btn.responsive-btn{
-    width:40%;
-    margin-right:5px;
-  }
-}
-
 
 /**** modal styles **/
 .modal-container{
@@ -185,8 +159,6 @@ nav a, button{
      border-radius: 50%;
  }
  
- 
- 
  span.psw {
      float: right;
      padding-top: 16px;
@@ -199,11 +171,8 @@ nav a, button{
      z-index: 1; /* Sit on top */
      left: 0;
      top: 0;
-     width: 100%; /* Full width */
+     width: 80%; /* Full width */
      height: 100%; /* Full height */
-     overflow: auto; /* Enable scroll if needed */
-     background-color: rgb(0,0,0); /* Fallback color */
-     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
      padding-top: 60px;
  }
  
@@ -247,18 +216,7 @@ nav a, button{
      to {transform: scale(1)}
  }
  
- /* Change styles for span and cancel button on extra small screens */
- @media screen and (max-width: 300px) {
-     span.psw {
-        display: block;
-        float: none;
-     }
-     .cancelbtn {
-        width: 100%;
-     }
- }
- 
-/** user-entries style **/ 
+ /** user-entries style **/ 
 img {
     border-radius: 50%;
 }
@@ -269,7 +227,7 @@ img {
         position: fixed;
         z-index: 1;
         top: 0;
-        left: 0;
+        left:0;
         background-color: #111;
         overflow-x: hidden;
         transition: 0.5s;
@@ -302,13 +260,7 @@ img {
         padding: 16px;
     }
 
-    @media screen and (max-height: 450px) {
-      .sidenav {padding-top: 15px;}
-      .sidenav a {font-size: 18px;}
-    }
-
-
-    .card {
+.card {
     /* Add shadows to create the "card" effect */
     width:100%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -316,6 +268,10 @@ img {
     text-align: center;
     height: auto;
     margin: 10px 0 10px 0;
+}
+.hamburgerIcon{
+    font-size:30px;
+    cursor:pointer;
 }
 
 a .card:hover{
@@ -331,17 +287,28 @@ a .card:hover{
 
 .day{
     flex:25%;
-    border-right:2px solid black;
 }
 
 .entry{
-    flex:75%;
+    flex:50%;
+}
+
+.buttons{
+    flex: 50%;
 }
 
 
 .right{
     float:right;
     margin-top:5px;
+}
+
+.left{
+    width  :100%;
+}
+
+.full-width{
+    width:100%;
 }
 
 .btn-float{
@@ -384,11 +351,108 @@ a .card:hover{
     cursor: pointer;
 }
 
-
-
-
 /* When moving the mouse over the submit button, add a darker green color */
 .userprfile input[type=submit]:hover {
     background-color: #818181;
 }
 
+
+/**** Media query styles ******/
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+    .day{
+        border-right:2px solid black;
+    }
+}
+
+    @media screen and (max-height: 450px) {
+      .sidenav {padding-top: 15px;}
+      .sidenav a {font-size: 18px;}
+    }
+
+    @media screen and (min-width:600px){
+        .left{
+            width  :50%;
+        }
+        
+        .full-width{
+            width:50%;
+        }
+
+        .row{
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .entry-title{
+            width: 100%;
+        }
+
+        .entry-desc{
+            width: 100%;
+        }
+
+        .sidenav{
+            width:20%;
+            order:1;
+        }
+        .text-center{
+            text-align: center;
+        }
+
+        .day{
+            border-right:2px solid black;
+        }
+
+        .main-form{
+            width:80%;
+            order: 2;
+            margin-left: 250px;
+        }
+
+        a.closebtn {
+            display: none;
+        }
+
+        .hamburgerIcon{
+            display: none;
+        }
+
+        .main{
+            display:flex;
+            flex-wrap: wrap;
+            height:100%;
+          }
+        
+          .register{
+            flex:30%;
+            order:2;
+            margin:auto;
+          }
+        
+          .about {
+            flex:70%;
+            order:1;
+        }
+          .story-section{    
+            margin-top:15%;
+            color:#fff;
+          }
+        
+          .story-section p{
+            color:#fff;
+          }
+        
+          .btn.responsive-btn{
+            width:40%;
+            margin-right:5px;
+          }
+    }
