--- a/ui/styles/main.css
+++ b/ui/styles/main.css
@@ -2,7 +2,7 @@ body, html {
     height: 100%;
     padding: 0;
     margin: 0;
-    color:#91a9bc;
+    color:#0a0072;
     font-family: "Lato", sans-serif;
     background-color: #fff;
 }
@@ -41,7 +41,7 @@ nav a, button{
 
 .icon {
     padding: 10px;
-    background: #65717b;
+    background: #0a0072;
     color: white;
     min-width: 50px;
     text-align: center;
@@ -65,12 +65,25 @@ nav a, button{
 }
 
 /* Set a style for the submit button */
-.btn {
-    background-color: #65717b;
+.btn-rounded {
+    background-color: #0a0072;
     color: white;
     padding: 15px 20px;
     border: none;
     border-radius: 10px;
+    cursor: pointer;
+    text-align: center;
+    opacity: 0.9;
+    margin: 5px 0 5px 0;
+    font-size:1rem;
+}
+
+.btn {
+    background-color: #0a0072;
+    color: white;
+    padding: 15px 20px;
+    border: none;
+    text-align: center;
     cursor: pointer;
     opacity: 0.9;
     margin: 5px 0 5px 0;
@@ -97,14 +110,13 @@ nav a, button{
 .story-section{
   width:60%;
   margin:auto;
-  /*margin-top:10rem;*/
+  font-family: 'PT Sans', sans-serif;
   color:#fff;
   text-transform: capitalize;
 }
 
 .story-section h1{
-  font-family: "Tangerine", sans-serif;
-  font-size: 2.5rem;
+  font-size: 40px;
 }
 
 
@@ -226,9 +238,10 @@ img {
         width: 0;
         position: fixed;
         z-index: 1;
+        color:#fff;
         top: 0;
         left:0;
-        background-color: #111;
+        background-color: #0a0072;
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 60px;
@@ -238,7 +251,7 @@ img {
         padding: 8px 8px 8px 32px;
         text-decoration: none;
         font-size: 25px;
-        color: #818181;
+        color: #ffffff;
         display: block;
         transition: 0.3s;
     }
@@ -310,6 +323,7 @@ a .card:hover{
 .full-width{
     width:100%;
 }
+
 
 .btn-float{
     position: absolute;
