(bg-layout-adjustment):fix some layout in the template [Fixes #159001074]

--- a/ui/styles/main.css
+++ b/ui/styles/main.css
@@ -7,6 +7,10 @@ body, html {
     background-color: #fff;
 }
 
+a{
+    text-decoration: none;
+}
+
 .register{
   width:100%;
 }
@@ -144,12 +148,12 @@ nav a, button{
 }
 
 /**** modal styles **/
-.modal-container{
-    width:60%;
+.modal-container {
+    width: 50%;
     margin: auto;
     background: #fff;
-    padding: 20px;
-  }
+    padding: 0 20px 20px 20px;
+}
  
  
  /* Extra styles for the cancel button */
@@ -199,8 +203,8 @@ nav a, button{
  /* The Close Button (x) */
  .close {
      position: absolute;
-     right: 25px;
-     top: 0;
+     right: 1px;
+     top: -10px;
      color: #000;
      font-size: 35px;
      font-weight: bold;
