feat(signup-api-endpoint): consume signup api endpoint
- modifies the client side path in app.js
- modifies main.css
- add index.js
- add bg.jpg to the public directory
- add index.html

[finishes #159509850]

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,6 +10,9 @@ body, html {
 h2 {
     font-size: 18px;
 }
+li{
+    list-style: none;
+}
 
 a{
     text-decoration: none;
@@ -21,6 +24,11 @@ a{
 
 .about{
   width:100%;
+}
+
+.text-red{
+    color:red;
+    text-transform: capitalize;
 }
 
 img{
