--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -423,7 +423,7 @@ h2#txt {
 
 /*-------------------------------------------------------------*/
 /* Style inputs with type="text", select elements and textareas */
-.userprofile input[type=text],input[type=file], select, textarea {
+.userprofile input[type=text],input[type=file], textarea {
     width: 100%; /* Full width */
     padding: 12px; /* Some padding */  
     border: 1px solid #ccc; /* Gray border */
