bug(fix-errors-client-side): fix bug  displaying success or failure message
- add browser env to eslintrc.json
- update README.md
- add public to the lint script in package.json
- add add firebase.js script to index.html
- clean up landing-page.html
- edit the main.css to make the modal box displays in the center
- modify the helper.entries.js to sort the list of entries desc

[deliver #159992048]

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -239,7 +239,7 @@ section#right {
      display: none; /* Hidden by default */
      position: fixed; /* Stay in place */
      z-index: 1; /* Sit on top */
-     left: 0;
+     left: 10;
      top: 0;
      width: 80%; /* Full width */
      height: 100%; /* Full height */
@@ -431,7 +431,8 @@ h2#txt {
     box-sizing: border-box; /* Make sure that padding and width stays in place */
     margin-top: 6px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+    font-family: 'Courier New', Courier, monospace
 }
 
 /* Style the submit button with a specific background color etc */
