feat(add-pagination): clean the codebase
- fix the typo in the public/main.css
- remove the duplicate line of code in scripts/main.js
- fixbugs in the scripts/app.js

[delivers #159992048]

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -518,8 +518,8 @@ a.logout {
         }
 
         .row-entry{
-            display:fles;
-            fles-wrap: wrap;
+            display:flex;
+            flex-wrap: wrap;
         }
         .entry-date{
             width:20%;
